# imperialism

./: .gitignore  CMakeLists.txt  Makefile  README.md  autoinstall.bat  autoinstall.sh  autosetup.bat  autosetup.sh  clear.bat  clear.sh  clickmap.xcf  grass.xcf  imperialism  main.cpp  map.cpp  map.h  mapnode.cpp  mapnode.h  nodedesert.xcf  nodegrass.xcf  nodetamplate.xcf  nodewater.xcf  palette.xcf  water.xcf
GIMP/: buildingconstruction.xcf  buildingfarm.xcf  buildinglumbermill.xcf  buildingtown.xcf  desert.xcf  deserthills.xcf  forest.xcf  grass.xcf  grassyhills.xcf  iconfood.xcf  iconmoney.xcf  iconstone.xcf  iconweapons.xcf  iconwood.xcf  mountain.xcf  nodeborder.xcf  nodedeserthills.xcf  nodedesertriver.xcf  nodeforest.xcf  nodeforesthills.xcf  nodegrasshills.xcf  nodegrasslandriver.xcf  nodejungle.xcf  nodejunglehills.xcf  nodemountain.xcf  noderiver.xcf  nodetemplate.xcf  nodetundra.xcf  nodetundrahills.xcf  nodetundrariver.xcf  palette.xcf  pause.xcf  riflemen.xcf  river.xcf  selectednode.xcf  terraindesert.xcf  terraindeserthills.xcf  terraindesertriver.xcf  terrainforest.xcf  terrainforesthills.xcf  (+14 more)
gameobject/: buildings.json
src/: building.cpp  building.h  constant.h  credits.cpp  credits.h  faction.cpp  faction.h  game.cpp  game.h  gamesettings.cpp  gamesettings.h  gamestate.h  graphicalresource.cpp  graphicalresource.h  gui.cpp  gui.h  guielement.cpp  guielement.h  guiimage.cpp  guiimage.h  guiscrollarea.cpp  guiscrollarea.h  guitextinput.cpp  guitextinput.h  guitextlabel.cpp  guitextlabel.h  hexvector.cpp  hexvector.h  imagebutton.cpp  imagebutton.h  (+22 more)
(+1 files in other folders)
